<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shoppingcart.LoginActivity"
    tools:ignore="MergeRootFrame" >

    <EditText
        android:id="@+id/userIdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_id_label" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/userIdEditText"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:inputType="textPassword"
         android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/password_label" />
    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/passwordEditText"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:inputType="textPassword"
         android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/confirm_password" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/confirmPasswordEditText"
        android:layout_below="@+id/confirmPasswordEditText"
        android:layout_marginLeft="102dp"
        android:layout_marginTop="23dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonRegister"
        android:layout_alignParentTop="true"
        android:layout_marginTop="49dp"
        android:text="@string/new_user"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>

