<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shoppingcart.LoginActivity"
    tools:ignore="MergeRootFrame" >

    <EditText
        android:id="@+id/emailIdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_id_label" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/emailIdEditText"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:inputType="textPassword"
         android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/password_label" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordEditText"
        android:layout_below="@+id/passwordEditText"
        android:layout_marginLeft="102dp"
        android:layout_marginTop="23dp"
        android:text="@string/login_label" />

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/passwordEditText"
        android:layout_below="@+id/buttonLogin"
        android:layout_marginRight="22dp"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:textColor="#0000ff"
        android:text="@string/new_user_register_here_label" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonLogin"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:text="Login"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>

